--- a/index.html
+++ b/index.html
@@ -10,52 +10,53 @@
 
 <body>
   <section class="info">
+    <img src="images/futuristicco_icon.png" alt="" class="fu-icon">
     <div class="info-text">
-      <h1>Futuristic x Harry Potter</h1>
-      <p>Blablablablablabla</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum.</p>
-      <button class="order-btn">Pre-order now &#9889;</button>
+      <img src="images/Harry_Potter.png" alt="" class="main-title harry">
+      <p class="x">X</p>
+      <img src="images/futuristicco_logo.png" alt="" class="main-title logo">
+      <hr>
+      <p class="scarfs-title">Hogwarts Houses Scarfs</p>
+      <p class="join-text">JOIN THE WIZARDING WORLD OF HARRY POTTER, YOU MUGGLE!</p>
+      <button class="order-btn">PRE-ORDER NOW</button>
     </div>
     <img src="images/down-arrow.svg" alt="" class="arrow-down">
   </section>
   <section class="chose">
-    <h3>Choose your house</h3>
-    <div class="houses-container">
-      <div class="house-details">
-        <p class="house-title">Gryffindor</p>
-        <img class="btn-A house-img" src="images/gryffindor.png" alt="gryffindor" />
-        <p class="house-desc">“You might belong in Gryffindor,
+    <h2 class="chose-title">- CHOOSE YOUR HOUSE -</h3>
+      <div class="houses-container">
+        <div class="house-details">
+          <p class="house-title">Gryffindor</p>
+          <img class="btn-A house-img" src="images/gryffindor.png" alt="gryffindor" />
+          <p class="house-desc">“You might belong in Gryffindor,
             Where dwell the brave at heart
             Their daring, nerve and chivalry,
             Set Gryffindors apart”</p>
-      </div>
-      <div class="house-details">
-        <p class="house-title">Slytherin</p>
-        <img class="btn-B house-img" src="images/slytherin.png" alt="slytherin" />
-        <p class="house-desc">“Or perhaps in Slytherin
+        </div>
+        <div class="house-details">
+          <p class="house-title">Slytherin</p>
+          <img class="btn-B house-img" src="images/slytherin.png" alt="slytherin" />
+          <p class="house-desc">“Or perhaps in Slytherin
             You’ll make your real friends,
             Those folks use any means
             To achieve their ends”</p>
-      </div>
-      <div class="house-details">
-        <p class="house-title">Ravenclaw</p>
-        <img class="btn-C house-img" src="images/ravenclaw.png" alt="ravenclaw" />
-        <p class="house-desc">“Or yet in wise old Ravenclaw,
+        </div>
+        <div class="house-details">
+          <p class="house-title">Ravenclaw</p>
+          <img class="btn-C house-img" src="images/ravenclaw.png" alt="ravenclaw" />
+          <p class="house-desc">“Or yet in wise old Ravenclaw,
             If you’ve a ready mind,
             Where those of wit and learning,
             Will always find their kind”</p>
+        </div>
+        <div class="house-details">
+          <p class="house-title">Hufflepuff</p>
+          <img class="btn-D house-img" src="images/hufflepuff.png" alt="hufflepuf" />
+          <p class="house-desc">“I’ll teach a lot, and treat them just the same”</p>
+        </div>
       </div>
-      <div class="house-details">
-        <p class="house-title">Hufflepuff</p>
-        <img class="btn-D house-img" src="images/hufflepuff.png" alt="hufflepuf" />
-        <p class="house-desc">“I’ll teach a lot, and treat them just the same”</p>
-      </div>
-    </div>
   </section>
+
   <section class="A hidden house">Gryffindor</section>
   <section class="B hidden house">Slytherin</section>
   <section class="C hidden house">Ravenclaw</section>
