--- a/index.html
+++ b/index.html
@@ -25,44 +25,84 @@
   <section class="chose">
     <h2 class="chose-title">- CHOOSE YOUR HOUSE -</h3>
       <div class="houses-container">
-        <div class="house-details">
-          <p class="house-title">Gryffindor</p>
+        <div class="house-details house-A">
+          <p class="house-title">GRYFFINDOR</p>
           <img class="btn-A house-img" src="images/gryffindor.png" alt="gryffindor" />
           <p class="house-desc">“You might belong in Gryffindor,
             Where dwell the brave at heart
             Their daring, nerve and chivalry,
             Set Gryffindors apart”</p>
         </div>
-        <div class="house-details">
-          <p class="house-title">Slytherin</p>
+        <div class="house-details house-B">
+          <p class="house-title">SLYTHERIN</p>
           <img class="btn-B house-img" src="images/slytherin.png" alt="slytherin" />
           <p class="house-desc">“Or perhaps in Slytherin
             You’ll make your real friends,
             Those folks use any means
             To achieve their ends”</p>
         </div>
-        <div class="house-details">
-          <p class="house-title">Ravenclaw</p>
+        <div class="house-details house-C">
+          <p class="house-title">RAVENCLAW</p>
           <img class="btn-C house-img" src="images/ravenclaw.png" alt="ravenclaw" />
           <p class="house-desc">“Or yet in wise old Ravenclaw,
             If you’ve a ready mind,
             Where those of wit and learning,
             Will always find their kind”</p>
         </div>
-        <div class="house-details">
-          <p class="house-title">Hufflepuff</p>
+        <div class="house-details house-D">
+          <p class="house-title">HUFFLEPUFF</p>
           <img class="btn-D house-img" src="images/hufflepuff.png" alt="hufflepuf" />
           <p class="house-desc">“I’ll teach a lot, and treat them just the same”</p>
         </div>
       </div>
   </section>
 
-  <section class="A hidden house">Gryffindor</section>
-  <section class="B hidden house">Slytherin</section>
-  <section class="C hidden house">Ravenclaw</section>
-  <section class="D hidden house">Hufflepuf</section>
-  <footer>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-    magna aliqua.</footer>
+  <section class="A hidden house">
+    <div class="selected-house-details">
+      <h2>THE GRYFFINDOR SCARF</h2>
+      <p class="selected-house-desc">With a lion as it crest and Professor McGonagall as its head, Gryffindor is the
+        house which
+        most values the virtues of courage, bravery and determination.</p>
+      <p class="selected-house-desc price">$19.99</p>
+      <button class="order-btn selected-btn">PRE-ORDER NOW</button>
+    </div>
+    <img src="images/hermione.png" alt="" class="selected-house-img">
+  </section>
+
+  <section class="B hidden house">
+    <div class="selected-house-details">
+      <h2>THE SLYTHERIN SCARF</h2>
+      <p class="selected-house-desc">"Or perhaps in Slytherin,
+          You'll make your real friends,
+          Those cunning folk use any means,
+          To achieve their ends."</p>
+      <p class="selected-house-desc price">$19.99</p>
+      <button class="order-btn selected-btn">PRE-ORDER NOW</button>
+    </div>
+    <img src="images/hermione.png" alt="" class="selected-house-img">
+  </section>
+  <section class="C hidden house">
+    <div class="selected-house-details">
+      <h2>THE RAVENCLAW SCARF</h2>
+      <p class="selected-house-desc">Ravenclaws prize wit, learning, and wisdom. It’ an ethos etched into founder
+        Rowena Ravenclaw diadem: ‘wit beyond measure is man’s greatest treasure’.</p>
+      <p class="selected-house-desc price">$19.99</p>
+      <button class="order-btn selected-btn">PRE-ORDER NOW</button>
+    </div>
+    <img src="images/cho.png" alt="" class="selected-house-img">
+  </section>
+  <section class="D hidden house">
+    <div class="selected-house-details">
+      <h2>THE HUFFLEPUFF SCARF</h2>
+      <p class="selected-house-desc">"You might belong in Hufflepuff,
+        Where they are just and loyal,
+        Those patient Hufflepuffs are true,
+        And unafraid of toil."</p>
+      <p class="selected-house-desc price">$19.99</p>
+      <button class="order-btn selected-btn">PRE-ORDER NOW</button>
+    </div>
+    <img src="images/hermione.png" alt="" class="selected-house-img">
+  </section>
   <script src="main.js"></script>
 </body>
 
